Image-stretch-fix

--- a/custom.css
+++ b/custom.css
@@ -146,7 +146,11 @@ label {
     transition: .3s;
     /* outline: 1px solid white; */
 }
-.grid-container>div>img{
+.grid-container>div>img,
+.grid-container-femmina>div>img,
+.grid-container-dexchange>div>img,
+.grid-container-splita>div>img
+{
     object-fit:cover;
 }
 .grid-container>div>img:hover {
